Improve HttpRequest.call() api